Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -114,11 +114,39 @@
 
       </div>
     </section>
-    <section class="w-full h-full bg-white py-[100px] ">
+    <section class="px-2 sm:px-8 lg:px-10 w-full h-full bg-white py-[100px] ">
       <div class="max-w-[819px] gap-6 mx-auto flex flex-col">
         <h2 class="font-bold text-[40px] text-center text-black">Unlock Joy with Every Celebration You Make!</h2>
         <p class="text-[18px] font-normal leading-8 text-[#121212] text-center">Experience the thrill of celebrating life’s milestones with exciting rewards. From birthdays to anniversaries, our service brings joy and unforgettable moments right to your doorstep.</p>
 
+      </div>
+    </section>
+    <section id="about" class="px-2 sm:px-8 lg:px-10 w-full h-full py-[100px]">
+      <div class="md:left-[100px] grid grid-cols-1 lg:grid-cols-2 gap-16">
+        <div class="flex gap-6 flex-col order-last lg:order-first">
+          <h3 class="text-[16px] font-normal text-[#121212] leading-8">About Us</h3>
+          <h2 class="text-[40px] font-bold text-[#121212] ">Crafting Unforgettable Moments, One Event at a Time</h2>
+          <p class="font-normal text-[18px] leading-8 text-[#4F4F4F]"></p>
+          <div class="grid grid-cols-2 gap-6">
+            <div class="p-6 rounded-lg bg-[#F6F6F6]">
+              <h2 class="font-bold text-[36px] text-[#121212]">10+</h2>
+              <h3 class="font-normal text-16px leading-6 text-[#121212]">Years of Event Planning</h3>
+            </div>
+            <div class="p-6 rounded-lg bg-[#F6F6F6]">
+              <h2 class="font-bold text-[36px] text-[#121212]">500+</h2>
+              <h3 class="font-normal text-16px leading-6 text-[#121212]">Events Successfully</h3>
+            </div>
+            <div class="p-6 rounded-lg bg-[#F6F6F6]">
+              <h2 class="font-bold text-[36px] text-[#121212]">98%</h2>
+              <h3 class="font-normal text-16px leading-6 text-[#121212]">Client Satisfaction Rate</h3>
+            </div>
+            <div class="p-6 rounded-lg bg-[#F6F6F6]">
+              <h2 class="font-bold text-[36px] text-[#121212]">200+</h2>
+              <h3 class="font-normal text-16px leading-6 text-[#121212]">Trusted Vendor Partners</h3>
+            </div>
+          </div>
+        </div>
+          <img src="./assets/aboutUs-img.png" alt="about-us image" class="order-first lg:order-last h-[546px] rounded-tl-[14px] rounded-bl-[14px] bg-[#D9D9D9] shadow-[0_20px_4px_0_#FC9A04]">
       </div>
     </section>
     <!-- SHOUTOUTS SECTION  -->
