Adjust heading size for better responsiveness and enhance hover effects for list items

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- CELEBRATION SECTION -->
     <section class="px-2 sm:px-8 lg:px-10 w-full h-full bg-white pt-[100px] pb-[72px] ">
       <div class="max-w-[819px] gap-6 mx-auto flex flex-col">
-        <h2 class="font-bold text-[40px] text-center text-black">Unlock Joy with Every Celebration You Make!</h2>
+        <h2 class="font-bold text-[32px] sm:text-[40px] text-center text-black">Unlock Joy with Every Celebration You Make!</h2>
         <p class="text-[18px] font-normal leading-8 text-[#121212] text-center">Experience the thrill of celebrating
           life’s milestones with exciting rewards. From birthdays to anniversaries, our service brings joy and
           unforgettable moments right to your doorstep.</p>
