--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header
-    class="w-full max-w-7xl fixed top-[43px] left-1/2 transform -translate-x-1/2 bg-[rgba(18,18,18,0.6)] backdrop-blur-2xl rounded-[74px] px-[30px] lg:px-[100px] py-3 flex justify-between items-center z-50 border border-white font-inter">
+    class="w-[95vw] max-w-7xl fixed top-[20px] left-1/2 transform -translate-x-1/2 bg-[rgba(18,18,18,0.6)] backdrop-blur-2xl rounded-[74px] px-[30px] lg:px-[100px] py-3 flex justify-between items-center z-50 border border-white font-inter">
     <!-- Logo -->
     <div class="w-1/4">
       <img src="./assets/logo2.png" alt="baedy logo" class="w-[25px] h-[30px] md:w-[40px] md:h-[50px]" />
@@ -862,7 +862,7 @@
 
 
     <!-- SHOUTOUTS SECTION  -->
-    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#f6f0d5" fill-opacity="1"
           d="M0,192L21.8,186.7C43.6,181,87,171,131,160C174.5,149,218,139,262,149.3C305.5,160,349,192,393,170.7C436.4,149,480,75,524,48C567.3,21,611,43,655,80C698.2,117,742,171,785,165.3C829.1,160,873,96,916,74.7C960,53,1004,75,1047,117.3C1090.9,160,1135,224,1178,261.3C1221.8,299,1265,309,1309,293.3C1352.7,277,1396,235,1418,213.3L1440,192L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z">
         </path>
@@ -871,7 +871,7 @@
         <path fill="#fff9e1" fill-opacity="1"
           d="M0,64L30,69.3C60,75,120,85,180,122.7C240,160,300,224,360,218.7C420,213,480,139,540,106.7C600,75,660,85,720,117.3C780,149,840,203,900,234.7C960,267,1020,277,1080,245.3C1140,213,1200,139,1260,101.3C1320,64,1380,64,1410,64L1440,64L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
         </path>
-      </svg> -->
+      </svg>
     <section id="shoutOut" class="px-4 md:px-[50px] lg:px-[100px] py-[100px] text-center bg-[#FFF9E1]">
 
       <div class="flex flex-col items-center px-4">
