Add Font Awesome icons to social media links in footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/assets/Logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <title>Baedy</title>
@@ -1304,9 +1305,9 @@
           </ul>
           <ul class="leading-10">
             <li class="text-[#FC9A04] text-lg font-medium">Stay Connected</li>
-            <li><a href="">Facebook</a></li>
-            <li><a href="">Linkedln</a></li>
-            <li><a href="">x</a></li>
+            <li><a href=""> <i class="fa-brands fa-facebook-f"></i>acebook</a></li>
+            <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href=""> <i class="fa-brands fa-x-twitter"></i></a></li>
           </ul>
         </div>
 
