--- a/index.html
+++ b/index.html
@@ -99,35 +99,53 @@
 
   <main>
 
-    <!-- HERO SECTION -->
-    <section id="home" class="hero-section w-full h-screen relative overflow-hidden">
-      <div class="w-full h-full bg-cover bg-center relative" style="background-image: url('./assets/hero-bg.png');">
-        <div class="bg-black opacity-70 absolute inset-0 z-0"></div>
-        <div
-          class="hero-content relative z-10 text-center flex flex-col items-center text-white max-w-[819px] lg:top-[222px] top-[180px] mx-auto gap-6">
-          <h1 class="hero-text font-bold text-[32px] md:text-[56px] text-center text-white">Celebrate Life’s Moments
-            <br> with Exciting Rewards!
-          </h1>
-          <p class="font-normal text-[14px] mb-2 text-[#D1D1D1]">Join us to unlock monthly rewards for your special
-            occasions. Experience the thrill of our game <br>shows and celebrate with friends and family!</p>
-          <div class="flex gap-6">
-            <a href="/register" class="btn-primary">Subscribe </a>
-            <a href="/register" class="btn-secondary">Learn More </a>
-          </div>
+  <!-- HERO SECTION -->
+  <section id="home" class="hero-section w-full h-screen relative overflow-hidden">
+    <div class="w-full h-full bg-cover bg-center relative" style="background-image: url('./assets/hero-bg.png');">
+      <div class="bg-black opacity-70 absolute inset-0 z-0"></div>
+      <div
+        class="hero-content relative z-10 text-center flex flex-col items-center text-white max-w-[819px] lg:top-[150px] top-[180px] mx-auto gap-6">
+        <h1 class="hero-text font-bold text-[32px] md:text-[56px] text-center text-white">Celebrate Life’s Moments
+          <br> with Exciting Rewards!
+        </h1>
+        <p class="font-normal text-[14px] mb-2 text-[#D1D1D1]">Join us to unlock monthly rewards for your special
+          occasions. Experience the thrill of our game <br>shows and celebrate with friends and family!</p>
+        <div class="flex gap-6">
+          <a href="/register" class="btn-primary">Subscribe </a>
+          <a href="/register" class="btn-secondary">Learn More </a>
         </div>
-
       </div>
-    </section>
+      <!-- Top Wave Layer 1 (Foreground, blending with background) -->
+      <svg class="absolute bottom-0 w-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 200">
+        <path fill="#FFFFFFE5" fill-opacity="0.9" d="M0,100C48,150,144,200,288,200C432,200,576,150,720,120C864,90,1008,90,1152,120C1296,150,1392,180,1440,190V200H0Z"></path>
+      </svg>
+      <!-- Top Wave Layer 2 (Gray Overlay) -->
+      <svg class="absolute bottom-0 w-full" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
+        <path fill="#FFFFFF" fill-opacity="" d="M0,150C96,200,288,250,432,230C576,210,720,180,864,180C1008,180,1152,210,1296,230C1392,240,1440,250,1440,250V300H0Z"></path>
+      </svg>
+    </div>
+  </section>
 
-    <!-- CELEBRATION SECTION -->
-    <section class="px-8 md:px-[50px] lg:px-[100px] w-full h-full bg-white pt-[100px] pb-[72px] ">
-      <div class="max-w-[819px] gap-6 mx-auto flex flex-col">
-        <h2 class="font-bold text-[28px] sm:text-[40px] text-center text-black">Unlock Joy with Every Celebration You Make!</h2>
-        <p class="text-[18px] font-normal leading-8 text-[#121212] text-center">Experience the thrill of celebrating
-          life’s milestones with exciting rewards. From birthdays to anniversaries, our service brings joy and
-          unforgettable moments right to your doorstep.</p>
-      </div>
-    </section>
+  <section class="w-full h-full bg-white relative">
+    <div class="max-w-[819px] gap-6 mx-auto flex flex-col pt-[100px]">
+      <h2 class="font-bold text-[28px] sm:text-[40px] text-center text-black">
+        Unlock Joy with Every Celebration You Make!
+      </h2>
+      <p class="text-[18px] font-normal leading-8 text-[#121212] text-center">
+        Experience the thrill of celebrating life’s milestones with exciting rewards.
+        From birthdays to anniversaries, our service brings joy and unforgettable moments right to your doorstep.
+      </p>
+    </div>
+  </section>
+
+  <style>
+    .hero-section svg {
+      z-index: 5;
+    }
+    .hero-section svg:nth-child(3) {
+      z-index: 4;
+    }
+  </style>
     <div class="w-full flex flex-col gap-6">
         <!-- Swiper -->
         <div class="carousel-wrapper overflow-hidden w-full">
@@ -862,29 +880,33 @@
     </section>
 
 
-    <!-- SHOUTOUTS SECTION  -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#f6f0d5" fill-opacity="1"
-          d="M0,192L21.8,186.7C43.6,181,87,171,131,160C174.5,149,218,139,262,149.3C305.5,160,349,192,393,170.7C436.4,149,480,75,524,48C567.3,21,611,43,655,80C698.2,117,742,171,785,165.3C829.1,160,873,96,916,74.7C960,53,1004,75,1047,117.3C1090.9,160,1135,224,1178,261.3C1221.8,299,1265,309,1309,293.3C1352.7,277,1396,235,1418,213.3L1440,192L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z">
-        </path>
-      </svg>
-      <svg class="-mt-60" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#fff9e1" fill-opacity="1"
-          d="M0,64L30,69.3C60,75,120,85,180,122.7C240,160,300,224,360,218.7C420,213,480,139,540,106.7C600,75,660,85,720,117.3C780,149,840,203,900,234.7C960,267,1020,277,1080,245.3C1140,213,1200,139,1260,101.3C1320,64,1380,64,1410,64L1440,64L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
-        </path>
-      </svg>
-    <section id="shoutOut" class="px-4 md:px-[50px] lg:px-[100px] py-[100px] text-center bg-[#FFF9E1]">
 
-      <div class="flex flex-col items-center px-4">
-        <p class="text-base md:text-lg leading-8 text-[#121212] max-w-3xl">Shoutouts</p>
-        <h2
-          class="font-bold text-2xl md:text-3xl lg:text-4xl text-[#121212] max-w-xl mt-2 leading-tight sm:leading-snug lg:leading-normal">
-          Celebrating You, the heart of Every Baedy Moment</h2>
-        <p class="text-base md:text-lg text-[#4F4F4F] max-w-3xl mt-4">At Baedy, every celebration is about people, and
-          we
-          love shining a spotlight on the incredible individuals and milestones that make each event truly special.
-        </p>
-      </div>
+  <!-- Wave Section -->
+<div class="relative w-full overflow-hidden bg-[#fff9e1]">
+  <!-- Background Wave -->
+<div class="relative z-100 -mt-50">
+    <svg class="w-full h-[50px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
+      <path fill="#fff9e1" fill-opacity="1"
+        d="M0,150C96,200,288,250,432,230C576,210,720,180,864,180C1008,180,1152,210,1296,230C1392,240,1440,250,1440,250V300H0Z">
+      </path>
+    </svg>
+  </div>
+
+  <!-- Shoutout Section -->
+  <section id="shoutOut" class="relative z-30 text-center px-4 md:px-[50px] lg:px-[100px] pt-[60px] pb-[100px]">
+    <div class="flex flex-col items-center px-4">
+      <p class="text-base md:text-lg leading-8 text-[#121212] max-w-3xl">Shoutouts</p>
+      <h2
+        class="font-bold text-2xl md:text-3xl lg:text-4xl text-[#121212] max-w-xl mt-2 leading-tight sm:leading-snug lg:leading-normal">
+        Celebrating You, the Heart of Every Baedy Moment!
+      </h2>
+      <p class="text-base md:text-lg text-[#4F4F4F] max-w-3xl mt-4">
+        At Baedy, every celebration is about people, and we love shining a spotlight on the incredible individuals and milestones that make each event truly special.
+      </p>
+    </div>
+  </section>
+</div>
+
 
       <div class="max-w-full px-4 pt-6">
         <!-- CAROUSEL LAYOUTS FOR MOBILE  -->
