Add responsive height to hero section for better mobile display

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <main>
 
     <!-- HERO SECTION -->
-    <section id="home" class="hero-section w-full h-[90vh] relative overflow-hidden">
+    <section id="home" class="hero-section w-full h-[90vh] lg:h-screen relative overflow-hidden">
       <div class="w-full h-full bg-cover bg-center relative" style="background-image: url('./assets/hero-bg.png');">
         <div class="bg-black opacity-70 absolute inset-0 z-0"></div>
         <div
