--- a/index.html
+++ b/index.html
@@ -216,106 +216,7 @@
         <!-- CAROUSEL LAYOUTS FOR MOBILE  -->
         <div class="block sm:hidden px-4 my-8">
           <div class="swiper">
-            <div class="swiper-wrapper gap-6">
-              <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael
-                      Joe</span></p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">Happy Birthday to a true star! 🌟 Wishing you a day full of love,
-                    fun, and unforgettable moments. Cheers to another epic year! 🎉🎂</p>
-                </div>
-              </div>
-
-              <!-- CARD 2 -->
-              <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Magret
-                      Amon</span></p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">Happiest of birthdays to you! 🎈 May your special day overflow with
-                    happiness, surprises, and all your favorite things. Here’s to shining bright! 🥳🎁</p>
-                </div>
-              </div>
-              <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Peter
-                      perry</span></p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">Happy Birthday to someone who lights up every room! ✨ May your day
-                    be packed with joy, love, and sweet celebrations. To another year of awesomeness! 🎂🎉</p>
-                </div>
-              </div>
-              <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Chrisy
-                      Carly</span></p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">It’s your day to sparkle! 🎉 Happy Birthday! Wishing you endless
-                    laughter, love, and all the happiness you deserve. Here’s to a fabulous year ahead! 🥂🎈</p>
-                </div>
-              </div>
-              <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Marry Flok</span>
-                  </p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">Happy Birthday to a total rockstar! 🎸 May your day be filled with
-                    good vibes, great company, and all the things that make you smile. Cheers to you! 🎂🎁</p>
-                </div>
-              </div>
-              <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael
-                      Joe</span></p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">Wishing you the happiest of birthdays! 🎈 May your day be as amazing
-                    as you are, filled with love, laughter, and sweet surprises. To another year of magic! 🥳🎉</p>
-                </div>
-              </div>
-              <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael
-                      Freeman</span></p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">Happy Birthday to an incredible soul! 🌈 Here’s to a day bursting
-                    with joy, love, and all your heart’s desires. Let’s celebrate you today! 🎂✨</p>
-                </div>
-              </div>
-              <div class="swiper-slide bg-white rounded-xl w-72 flex-shrink-0">
-                <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-                  <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full !h-40 object-cover">
-                  <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Anita Jane</span>
-                  </p>
-                </div>
-                <div class="text-left p-4">
-                  <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-                  <p class="text-[#3D3D3D] text-sm">It’s your birthday, and you deserve the best! 🎉 Wishing you a day
-                    full of laughter, love, and pure happiness. Here’s to a spectacular year! 🥂🎈</p>
-                </div>
-              </div>
-            </div>
+            <div class="swiper-wrapper gap-6 shoutoutSwipe"></div>
             <!-- Pagination dots -->
             <!-- <div class="swiper-pagination mt-10"></div> -->
             <div class="swiper-pagination mt-6"></div>
@@ -327,106 +228,7 @@
         </div>
 
         <!-- Grid Layout (Visible from sm and above) -->
-        <div class="hidden sm:grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mb-8 px-4">
-          <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-            <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-              <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-              <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael Joe</span>
-              </p>
-            </div>
-            <div class="text-left p-4">
-              <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-              <p class="text-[#3D3D3D] text-sm">Happy Birthday to a one-of-a-kind treasure! 💖 May your special day be
-                filled with joy, love, and endless fun. Cheers to another year of brilliance! 🎂🎉</p>
-            </div>
-          </div>
-          <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-            <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-              <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-              <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Magret Amon</span>
-              </p>
-            </div>
-            <div class="text-left p-4">
-              <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-              <p class="text-[#3D3D3D] text-sm">Here’s to you on your big day! 🎈 Happy Birthday! May it be filled with
-                love, laughter, and all the things that make your heart soar. To an amazing year ahead! 🥳✨</p>
-            </div>
-          </div>
-          <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-            <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-              <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-              <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Peter perry</span>
-              </p>
-            </div>
-            <div class="text-left p-4">
-              <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-              <p class="text-[#3D3D3D] text-sm">Happy Birthday to a true star! 🌟 Wishing you a day full of love, fun,
-                and unforgettable moments. Cheers to another epic year! 🎉🎂</p>
-            </div>
-          </div>
-          <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-            <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-              <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-              <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Chrisy Carly</span>
-              </p>
-            </div>
-            <div class="text-left p-4">
-              <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-              <p class="text-[#3D3D3D] text-sm">Happiest of birthdays to you! 🎈 May your special day overflow with
-                happiness, surprises, and all your favorite things. Here’s to shining bright! 🥳🎁</p>
-            </div>
-          </div>
-          <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-            <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-              <img src="assets/shoutout-img-4.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-              <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Marry Flok</span>
-              </p>
-            </div>
-            <div class="text-left p-4">
-              <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-              <p class="text-[#3D3D3D] text-sm">Happy Birthday to someone who lights up every room! ✨ May your day be
-                packed with joy, love, and sweet celebrations. To another year of awesomeness! 🎂🎉</p>
-            </div>
-          </div>
-          <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-            <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-              <img src="assets/shoutout-img-3.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-              <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Michael
-                  Freeman</span>
-              </p>
-            </div>
-            <div class="text-left p-4">
-              <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-              <p class="text-[#3D3D3D] text-sm">It’s your day to sparkle! 🎉 Happy Birthday! Wishing you endless
-                laughter, love, and all the happiness you deserve. Here’s to a fabulous year ahead! 🥂🎈</p>
-            </div>
-          </div>
-          <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-            <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-              <img src="assets/shoutout-img-2.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-              <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">Anita Jane</span>
-              </p>
-            </div>
-            <div class="text-left p-4">
-              <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-              <p class="text-[#3D3D3D] text-sm">Wishing you the happiest of birthdays! 🎈 May your day be as amazing as
-                you are, filled with love, laughter, and sweet surprises. To another year of magic! 🥳🎉</p>
-            </div>
-          </div>
-          <div class="bg-[#FFFFFF] rounded-xl w-full max-w-xs mx-auto h-auto flex flex-col">
-            <div class="bg-[#F6F6F6] p-2.5 rounded-xl text-left">
-              <img src="assets/shoutout-img-1.jpg" alt="" class="rounded-xl w-full h-40 object-cover">
-              <p class="pt-2 text-[#6D6D6D]">Celebrant: <span class="font-semibold text-[#3D3D3D]">James Carly</span>
-              </p>
-            </div>
-            <div class="text-left p-4">
-              <h2 class="text-[#FC9A04] font-semibold">Shoutout Message</h2>
-              <p class="text-[#3D3D3D] text-sm">It’s your birthday, and you deserve the best! 🎉 Wishing you a day full
-                of laughter, love, and pure happiness. Here’s to a spectacular year! 🥂🎈</p>
-            </div>
-          </div>
-
-        </div>
+        <div class="hidden sm:grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mb-8 px-4 shoutouts"></div>
         <a href="#"
           class="bg-[#FC9A04] text-[#FFFFFF] text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:text-white transition">Learn
           More</a>
