added new page for more shout outs

--- a/index.html
+++ b/index.html
@@ -1095,8 +1095,8 @@
           </div>
 
         </div>
-        <a href="#"
-          class="bg-[#FC9A04] text-[#FFFFFF] text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:text-white transition">Learn
+        <a href="shoutouts.html"
+          class="bg-[#FC9A04] text-[#FFFFFF] text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:text-white transition">Load
           More</a>
       </div>
     </section>
@@ -1150,7 +1150,7 @@
         <a href="#"
           class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:bg-[#E58903] transition">Join
           Us</a>
-        <a href="#"
+        <a href="s"
           class="bg-white text-[#DF7200] text-sm sm:text-base font-semibold rounded-full px-6 py-3 border-2 border-[#DF7200] hover:bg-[#DF7200] hover:text-white transition">Learn
           More</a>
       </div>
