Update login and registration links to point to the correct external URLs

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       </nav>
       <ul class="flex gap-6 items-center">
         <li class="py-[20px] px-[12px] gap-[10px] text-[14px] font-normal text-white">
-          <a href="/login">Login</a>
+          <a href="/https://app.bigdaymi.com/auth/login">Login</a>
           <div class="w-full h-[3px] bg-[#7B310C] translate-y-[overfo[20px] bottom-line "></div>
         </li>
         <li>
-          <a href="/register" class="btn-primary">Join Us</a>
+          <a href="/https://app.bigdaymi.com/auth/register" class="btn-primary">Join Us</a>
         </li>
       </ul>
     </div>
