Update login and registration links to point to the new authentication URLs

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       </nav>
       <ul class="flex gap-6 items-center">
         <li class="py-[20px] px-[12px] gap-[10px] text-[14px] font-normal text-white">
-          <a href="/login">Login</a>
+          <a href="https://app.bigdaymi.com/auth/login">Login</a>
           <div class="w-full h-[3px] bg-[#7B310C] translate-y-[overfo[20px] bottom-line "></div>
         </li>
         <li>
-          <a href="/register" class="btn-primary">Join Us</a>
+          <a href="https://app.bigdaymi.com/auth/register" class="btn-primary">Join Us</a>
         </li>
       </ul>
     </div>
@@ -88,11 +88,11 @@
     <div class="flex justify-center gap-4 mt-6">
       <ul class="flex gap-6 items-center">
         <li class="py-[20px] px-[12px] gap-[10px] text-[14px] font-normal text-white">
-          <a href="/login">Login</a>
+          <a href="https://app.bigdaymi.com/auth/login">Login</a>
           <div class="w-full h-[3px] bg-[#7B310C] translate-y-[overfo[20px] bottom-line "></div>
         </li>
         <li>
-          <a href="/register" class="btn-primary">Join Us</a>
+          <a href="https://app.bigdaymi.com/auth/register" class="btn-primary">Join Us</a>
         </li>
       </ul>
     </div>
@@ -113,8 +113,8 @@
           <p class="font-normal text-[14px] mb-2 text-[#D1D1D1]">Join us to unlock monthly rewards for your special
             occasions. Experience the thrill of our game <br>shows and celebrate with friends and family!</p>
           <div class="flex gap-6">
-            <a href="/register" class="btn-primary">Subscribe </a>
-            <a href="/register" class="btn-secondary">Learn More </a>
+            <a href="https://app.bigdaymi.com/auth/register" class="btn-primary">Subscribe </a>
+            <a href="https://app.bigdaymi.com/auth/register" class="btn-secondary">Get Started</a>
           </div>
         </div>
         <!-- Top Wave Layer 1 (Foreground, blending with background) -->
@@ -229,9 +229,8 @@
 
         <!-- Grid Layout (Visible from sm and above) -->
         <div class="hidden sm:grid grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6 mb-8 px-4 shoutouts"></div>
-        <a href="#"
-          class="bg-[#FC9A04] text-[#FFFFFF] text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:text-white transition">Learn
-          More</a>
+        <a href="https://app.bigdaymi.com/auth/register"
+          class="bg-[#FC9A04] text-[#FFFFFF] text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:text-white transition">Get Started</a>
       </div>
     </section>
 
@@ -281,12 +280,10 @@
         </div>
       </div>
       <div class="flex justify-center gap-4 mt-6">
-        <a href="#"
+        <a href="https://app.bigdaymi.com/auth/register"
           class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:bg-[#E58903] transition">Join
           Us</a>
-        <a href="#"
-          class="bg-white text-[#DF7200] text-sm sm:text-base font-semibold rounded-full px-6 py-3 border-2 border-[#DF7200] hover:bg-[#DF7200] hover:text-white transition">Learn
-          More</a>
+        
       </div>
     </section>
 
@@ -339,7 +336,7 @@
             </div>
           </div>
         </div>
-        <a href="#"
+        <a href="https://app.bigdaymi.com/auth/register"
           class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:bg-[#E58903] transition">Join
           Us</a>
       </div>
