Update registration link to point to the correct authentication URL; remove unused "Learn More" button

--- a/index.html
+++ b/index.html
@@ -484,9 +484,6 @@
         <a href="https://app.bigdaymi.com/auth/register"
           class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:bg-[#E58903] transition">Join
           Us</a>
-        <a href="#"
-          class="bg-white text-[#DF7200] text-sm sm:text-base font-semibold rounded-full px-6 py-3 border-2 border-[#DF7200] hover:bg-[#DF7200] hover:text-white transition">Learn
-          More</a>
       </div>
     </section>
 
@@ -539,7 +536,7 @@
             </div>
           </div>
         </div>
-        <a href="#"
+        <a href="https://app.bigdaymi.com/auth/register"
           class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 hover:bg-[#E58903] transition">Join
           Us</a>
       </div>
@@ -596,7 +593,7 @@
             <input type="email" id="email" placeholder="email@gmail.com"
               class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]">
           </div>
-          <button type="submit"
+          <button
             class="bg-[#FC9A04] text-white text-sm sm:text-base font-semibold rounded-full px-6 py-3 mt-6 hover:bg-[#E58903] transition">Join
             Us
           </button>
