--- a/index.html
+++ b/index.html
@@ -1263,14 +1263,14 @@
   </main>
 
   <!-- FOOTER SECTION  -->
-  <footer class="bg-[#121212] text-[#FFFFFF] h-auto pt-[200px] mt-[-100px] pb-[60px] px-4 md:px-6 lg:px-[100px]">
-    <div class="flex flex-col md:flex-row justify-between px-4 sm:px-8 lg:px-16 pt-30 sm:pt-50">
-      <div class="w-[340px] sm:w-[400px] flex flex-col gap-8">
+  <footer class="bg-[#121212] text-[#FFFFFF] h-auto pt-[200px] mt-[-100px] pb-[60px] px-4 md:px-6 lg:px-[100px] w-full">
+    <div class="flex flex-col md:flex-row justify-between px-4 sm:px-8 lg:px-16 pt-30 sm:pt-50 ">
+      <div class="w-full sm:w-[400px] flex flex-col gap-8">
         <img src="assets/Logo.png" alt="" class="w-[50px]">
         <p>Subscribe to our newsletter for the latest updates on features and offerings.</p>
 
         <form action="">
-          <div class="flex flex-col gap-2">
+          <div class="flex flex-col gap-2 max-w-[400px] w-full">
             <label for="email" class="text-sm sm:text-base font-medium text-[#FFFFFF]">Email</label>
             <input type="email" id="email" placeholder="email@gmail.com"
               class="w-full p-3 text-base border border-[#E7E7E7] rounded-lg focus:outline-none focus:ring-2 focus:ring-[#FC9A04]">
